--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@ body {
     
 }
 
+button {
+    width: 100px;
+    height: 80px;
+}
+
 .calc {
     display: flex;
     flex-direction: column;
@@ -16,6 +21,7 @@ body {
 
 .screen {
     background-color: gray;
+    font-size: 50px;
     padding: 5px;
     text-align: right;
     border: 1px;
